--- a/templates/_contact_modal.html
+++ b/templates/_contact_modal.html
@@ -34,6 +34,14 @@
                     </td>
                 </tr>
                 <tr>
+                    <td><label for="phone_number">Phone Number:</label></td>
+                    <td><input type="text" id="phone_number" name="phone_number"></td>
+                </tr>
+                <tr>
+                    <td><label for="bio">Bio:</label></td>
+                    <td><textarea id="bio" name="bio" rows="4"></textarea></td>
+                </tr>
+                <tr>
                     <td><label for="next_project">Next Project:</label></td>
                     <td><input type="text" id="next_project" name="next_project" placeholder="e.g., 2.1, 3.2 ..."></td>
                 </tr>
