--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -17,8 +17,9 @@
             <tr>
                 <th>No.</th>
                 <th>Name</th>
-                <th>Club</th>
                 <th>Type</th>
+                <th>Club</th>
+                <th>Phone</th>
                 <th>Working Path</th>
                 <th>Next Project</th>
                 <th>Completed Levels</th>
@@ -36,8 +37,9 @@
                         <sup class="dtm-superscript">DTM</sup>
                     {% endif %}
                 </td>
-                <td>{{ contact.Club }}</td>
                 <td>{{ contact.Type }}</td>
+                <td>{{ contact.Club }}</td>
+                <td>{{ contact.Phone_Number if contact.Phone_Number else '' }}</td>
                 <td>{{ contact.Working_Path }}</td>
                 <td>{{ contact.Next_Project }}</td>
                 <td>{{ contact.Completed_Levels }}</td>
