fix(contact): handle the case of adding a duplicate contact

--- a/templates/_contact_modal.html
+++ b/templates/_contact_modal.html
@@ -24,7 +24,11 @@
                     <td><input type="text" id="club" name="club" placeholder="e.g., Club1/Club2"></td>
                 </tr>
                 <tr>
-                    <td><label for="working_path">Working Path:</label></td>
+                    <td><label for="dtm">DTM:</label></td>
+                    <td><input type="checkbox" id="dtm" name="dtm"></td>
+                </tr>
+                <tr>
+                    <td><label for="working_path">Pathway:</label></td>
                     <td>
                         <select id="working_path" name="working_path">
                             {% for pathway in pathways %}
@@ -32,14 +36,6 @@
                             {% endfor %}
                         </select>
                     </td>
-                </tr>
-                <tr>
-                    <td><label for="phone_number">Phone Number:</label></td>
-                    <td><input type="text" id="phone_number" name="phone_number"></td>
-                </tr>
-                <tr>
-                    <td><label for="bio">Bio:</label></td>
-                    <td><textarea id="bio" name="bio" rows="4"></textarea></td>
                 </tr>
                 <tr>
                     <td><label for="next_project">Next Project:</label></td>
@@ -50,8 +46,16 @@
                     <td><input type="text" id="completed_levels" name="completed_levels" placeholder="e.g., EH5/PM3"></td>
                 </tr>
                 <tr>
-                    <td><label for="dtm">DTM:</label></td>
-                    <td><input type="checkbox" id="dtm" name="dtm"></td>
+                    <td><label for="email">Email: </label></td>
+                    <td><input type="email" id="email" name="email"></td>
+                </tr>
+                <tr>
+                    <td><label for="phone_number">Phone Number:</label></td>
+                    <td><input type="text" id="phone_number" name="phone_number"></td>
+                </tr>
+                <tr>
+                    <td><label for="bio">Bio:</label></td>
+                    <td><textarea id="bio" name="bio" rows="4"></textarea></td>
                 </tr>
             </table>
             <div class="form-actions">
