--- a/templates/agenda.html
+++ b/templates/agenda.html
@@ -69,14 +69,14 @@
                     <th><i class="fas fa-hourglass-half"></i> Min'</th>
                 </tr>
                 <tr class="edit-mode-header" style="display: none;">
-                    <th>No</th>
-                    <th>Start Time</th>
-                    <th>Session Type</th>
-                    <th>Session Title</th>
-                    <th>Owner</th>
-                    <th>Designation</th>
-                    <th>Min</th>
-                    <th>Max</th>
+                    <th class="col-no">No</th>
+                    <th class="col-start-time">Start Time</th>
+                    <th class="col-session-type">Session Type</th>
+                    <th class="col-session-title">Session Title</th>
+                    <th class="col-owner">Owner</th>
+                    <th class="col-designation">Designation</th>
+                    <th class="col-duration-min">Min</th>
+                    <th class="col-duration-max">Max</th>
                     <th class="actions-column">Actions</th>
                 </tr>
             </thead>
