--- a/templates/base.html
+++ b/templates/base.html
@@ -91,6 +91,8 @@
         {% endif %}
     </div>
 
+    <div id="nav-overlay"></div>
+
     <div class="main-content" id="main-content">
         {% if session.logged_in and session.display_name %}
         <div class="profile-container">
