--- a/static/css/login.css
+++ b/static/css/login.css
@@ -30,3 +30,22 @@
     width: 100%;
     margin-top: 10px;
 }
+
+.alert-container {
+    width: 100%;
+    max-width: 400px;
+    margin-bottom: 15px;
+}
+
+.alert {
+    padding: 15px;
+    margin-bottom: 20px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+}
+
+.alert-error {
+    color: #721c24;
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
+}
