--- a/templates/login.html
+++ b/templates/login.html
@@ -12,6 +12,15 @@
     <div class="login-container">
         <img src="{{ url_for('static', filename='images/SHLTMC-logo.png') }}" alt="SHLTMC Logo" style="width: 150px; margin-bottom: 20px;">
         <h1>Meeting Manager Login</h1>
+        {% with messages = get_flashed_messages(with_categories=true) %}
+          {% if messages %}
+            <div class="alert-container">
+              {% for category, message in messages %}
+                <div class="alert alert-{{ category }}">{{ message }}</div>
+              {% endfor %}
+            </div>
+          {% endif %}
+        {% endwith %}
         <form action="{{ url_for('main_bp.login') }}" method="post" class="login-form">
             <div>
                 <label for="username">Username or Email:</label>
