--- a/templates/settings.html
+++ b/templates/settings.html
@@ -91,29 +91,34 @@
                 <thead>
                     <tr>
                         <th>No.</th>
-                        <th>Username</th>
-                        <th>Email</th>
-                        <th>Full Name</th>
+                        <th>Full Name (Username)</th>
                         <th>Role</th>
+                        <th>Email</th>
+                        <th>Phone</th>
+                        <th>Mentor</th>
+                        <th>Status</th>
                         <th>Date Created</th>
                         <th>Actions</th>
                     </tr>
                 </thead>
                 <tbody>
                     {% for user in all_users %}
-                    <tr>
+                    <tr class="{{ 'inactive-user' if user.Status == 'inactive' else '' }}">
                         <td>{{ loop.index }}</td>
-                        <td>{{ user.Username }}</td>
-                        <td>{{ user.Email if user.Email else '' }}</td>
                         <td>
                             {% if user.contact %}
                                 {{ user.contact.Name }}
+                                ({{ user.Username }})
                                 <i class="fas fa-link" style="color: green; margin-left: 5px;"></i>
                             {% else %}
                                 <em style="color: #888;">Not Linked</em>
                             {% endif %}
                         </td>
                         <td>{{ user.Role }}</td>
+                        <td>{{ user.Email if user.Email else '' }}</td>
+                        <td>{{ user.contact.Phone_Number if user.contact and user.contact.Phone_Number else '' }}</td>
+                        <td>{{ user.mentor.Name if user.mentor else '' }}</td>
+                        <td>{{ user.Status }}</td>
                         <td>{{ user.Date_Created.strftime('%Y-%m-%d') if user.Date_Created else '' }}</td>
                         <td>
                             <div class="action-links">
